# polars_rng

./: .gitignore  Cargo.toml  pyproject.toml
python/polars_rand/: __init__.py  helpers.py
python/polars_rng/: __init__.py
src/: lib.rs
tests/: test_sampling.py
