[project]
name = "polars-rand"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alistair Pattison", email = "alistairpattison@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "polars>=1.27.0",
]

[tool.maturin]
module-name = "polars_rand._core"
python-packages = ["polars_rand"]
python-source = "python"
profile = "dev" # faster builds, turn off for release

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pytest>=8.3.5",
]
